  - You can disable icotools support in q4wine by adding -DWITHOUT_ICOTOOLS=ON to cmake;
  - Winetools support is disabled by default. You can enable it by adding -DWITH_WINETOOLS=ON to cmake args;
  - All developer stuff is disabled by default. You can enable it by adding -DWITH_DEVELOP_STUFF=ON to cmake args;
  - New database class;
  - kdesu\gksu support;
  Fixed:
  - Many small fixes;
  - Updated STDERR message catch function;
  - Added FreeBSD port patches by Dmitry Marakasov aka amdmi3;
  - Fixed readonly text field on prefix create;
  - Fixed q4wine.desktop GENERIC names;
  - Fixed IconSettings path detections (ProgramPath\WorkDirPath e.t.c.);
  - Fixed .exe adding to IconName on Prgoram file select;
  - Run, AppSettings, ImageManager, Wizard and IconSettings dialogs now are modal dialogs;
  - Fixed LC_ALL and LS_MESSAGES locale detection;
  - Winetriks executable now puts into $HOME/.config/q4inwe/ directory;
  - No sudo now needed for Winetriks download and install;

Version 0.111
 core:
  New:
  - New q4wine icons with different sizes;
  - Updated q4wine.desktop;
  - Make install now install q4wine.desktop and icons;
  - Added basic shortcuts;
  - q4wine now save and restore size and position of main window;
 core:
  Fixed:
  - Fixed icoutils icon export bugs;
  - Fixed file name case sense on icon exort;
  - Added .exe or .dll file selection masks on icon export;
  - Fixed start selection file path on icon export;
  - FreeBSD: kvm functions now do not need kmem gid;
  - FreeBSD: wine_pthread now resolve exec name;
  - Updated About dialog;
  - Updated Ukrainian and Russian locales;

Version 0.110
 core:
  New:
  - FreeBSD full support (proc and mounts);
  - nrg images mount (Linux only);
  - new core functions class (will be moved to libq4wine shared library);
  - updated Ukrainian and Russian locales;
  - basic wis xml parser class;
  - Added nice level field to Run dialog;
  - Added desktop size to Run dialog;

  Fixed:
  - Winetriks prefix fixes;